<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    android:orientation="vertical"
    tools:context=".NewAccount">

    <TextView
        android:id="@+id/txt_success_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/create_account"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableLeft="@drawable/contact"
        android:drawablePadding="10dp"
        android:hint="@string/enter_name"
        android:singleLine="true"
        android:textColor="@color/White"
        android:textColorHint="@color/Gray" />


    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="8dp"
        android:drawableLeft="@drawable/key"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/White"
        android:textColorHint="@color/Gray"/>

    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="number"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="10dp"
        android:hint="@string/phone"
        android:singleLine="true"
        android:textColor="@color/White"
        android:textColorHint="@color/Gray" />

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:fontFamily="monospace"
        android:text="@string/register"
        android:textStyle="italic" />

</LinearLayout>