<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/img"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/title"
        android:layout_toRightOf="@id/img"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:id="@+id/sub_title"
        android:text="@string/sub_title"
        android:layout_toRightOf="@id/img"
        android:layout_below="@id/title"
        />

    <TextView
        android:text="@string/price"
        android:id="@+id/price"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/RED"
        android:layout_marginLeft="20sp"
        android:layout_toRightOf="@id/img"
        android:layout_below="@id/sub_title"
        />


    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sub_title"
        android:layout_toRightOf="@+id/price"
        android:src="@drawable/ic_plus"
        android:layout_alignParentRight="true"/>


</RelativeLayout>